<resources>
    <string name="app_name">图言</string>
    <string name="login_user">请输入用户名</string>
    <string name="login_password">请输入登录密码</string>
    <string name="regeist_nick">请输入登录昵称</string>
    <string name="regist_msg">请输入个性签名</string>
    <string name="regist_email">请输入辅助邮箱</string>
    <string name="login_btnText">登　录</string>
    <string name="login_renemberText">自动登录</string>
    <string name="login_forgetpsw">找回密码</string>
    <string name="login_reguser">点我进行注册</string>
    <string name="cameraisnull">未检测到您的手机前置摄像头</string>
    <string name="regeist">注　册</string>
    <string name="vert">验　证</string>
    <string name="findpsw_title">请输入已经激活的注册邮箱账号</string>
    <string name="findpsw_btn">找回密码</string>
    <string name="iconText_funpic">趣图</string>
    <string name="iconText_famil">相似脸</string>
    <string name="iconText_friends">社区</string>
    <string name="iconText_owner">我</string>
    <string name="owner_mworks">我的作品集</string>
    <string name="owner_safe">账号安全</string>
    <string name="owner_idea">意见反馈</string>
    <string name="owner_about">关于图言</string>
    <string name="owner_share">分享好友</string>
    <string name="face_reg_title">人脸识别</string>
    <string name="face_reg_note">开启人脸识别后，可进行人脸登录。</string>
    <string name="face_reg_pic">照片</string>
    <string name="face_reg_btn">使　用</string>

    <string name="safe_face">人脸识别</string>
    <string name="safe_email">邮箱激活状态</string>
    <string name="safe_psw">修改密码</string>

    <string name="chpsw_old">旧密码：</string>
    <string name="chpsw_old_hint">　</string>
    <string name="chpsw_new1">新密码：</string>
    <string name="chpsw_new2">确认密码：</string>
    <string name="chpsw_ok">确认修改</string>
    <string name="chpsw_showpsw">显示密码</string>

    <string name="owner_exit">退出登录</string>
    <string name="title_activity_chpsw">ChpswActivity</string>

    <string name="persondetail_head">头像</string>
    <string name="persondetail_nick">昵称</string>
    <string name="persondetail_msg">个性签名</string>
    <string name="persondetail_username">用户名</string>
    <string name="persondetail_email">邮箱</string>

    <string name="chnick">请输入新的昵称</string>
    <string name="chmsg">请输入新的签名</string>
    <string name="chnick_btn">更　新</string>

    <string name="about_msg">\u3000\u3000“图言”作为一款基于人脸识别的趣图手机应用，
        它是一款可以选择人脸识别进行登录的软件。如今手机app都需要有登录验证功能，
        常规的输入用户名密码的登陆方式已经不能满足人们对登录以及安全性的要求，
        因此本软件以人脸识别技术为中心，设计了人脸识别技术进行登录以及娱乐。
    </string>

    <string name="idea_submit">提交</string>
    <string name="idea_firsthint">欢迎提出宝贵的意见和建议</string>
    <string name="idea_secondhint">手机号码（选填）</string>

    <string name="funcpic_photo">图库</string>
    <string name="funcpic_camera">手机拍照</string>
    <string name="funcpic_skin">装饰</string>

    <string name="funcpic_dialogtitle">分享社区</string>
    <string name="funcpic_dialogcancel">取消</string>
    <string name="funcpic_dialogok">确定</string>
    <string name="funcpic_dialoghint">请输入分享内容</string>


    <string name="head_first">下拉刷新</string>
    <string name="head_second">上次刷新：</string>


    <string name="famil_me">我的照片</string>
    <string name="famil_num">相似度:</string>


</resources>
