<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4000"
    >

    <LinearLayout
        android:id="@+id/id_sharedialog"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="@drawable/funcpic_dialogbackground"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/funcpic_dialogtitle"
            android:textColor="#afff"
            android:textSize="22sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="#ddd"/>

        <EditText
            android:id="@+id/id_share2content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:textSize="18sp"
            android:hint="@string/funcpic_dialoghint"
            android:background="@drawable/edit"
            android:maxLines="3"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#ccc"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/funcpic_dialogcancel"
                android:textColor="#a000"
                android:background="@android:color/transparent"
                android:onClick="canelShare"
                />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="#ccc"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/funcpic_dialogok"
                android:padding="12dp"
                android:background="@android:color/transparent"
                android:onClick="okShare"
                android:textColor="#a000"
                />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>