<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/face_reg_bg">

    <include layout="@layout/activity_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="12dp"
        android:background="#666" />

    <RelativeLayout
        android:id="@+id/id_toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/owner_item_bg"
        android:paddingBottom="12dp"
        android:paddingTop="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:text="@string/face_reg_title"
            android:textColor="#000"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/id_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="18dp"
            android:src="@mipmap/face_reg_off" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#666" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="10dp"
        android:text="@string/face_reg_note"
        android:textColor="#8666"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="22dp"
        android:text="@string/face_reg_pic"
        android:textColor="#000"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/id_head"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20dp"
        android:src="@mipmap/default_reg_head" />


    <Button
        android:id="@+id/id_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:text="@string/face_reg_btn"
        android:layout_marginTop="32dp"
        android:background="#00bfff"
        android:textColor="@color/hintext"
        />

</LinearLayout>
