<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/id_toorbarinclude"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/login_head"
                android:scaleType="matrix"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/id_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/id_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:layout_marginTop="50dp"
                android:layout_centerHorizontal="true"
                />

            <EditText
                android:id="@+id/id_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:hint="@string/login_user"
                android:drawablePadding="8dp"
                android:drawableLeft="@mipmap/user"
                android:background="@drawable/edit"
                style="@style/logineditstyle"
                />

            <EditText
                android:id="@+id/id_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="220dp"
                android:hint="@string/login_password"
                android:drawableLeft="@mipmap/password"
                android:drawablePadding="8dp"
                android:background="@drawable/edit"
                style="@style/logineditstyle"
                 />

            <CheckBox
                android:id="@+id/id_remenberInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_renemberText"
                android:textColor="#ccc"
                android:textSize="16sp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="290dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_btn"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="340dp"
                android:textSize="19sp"
                android:text="@string/login_btnText"
                android:textColor="@color/hintext"
                android:onClick="onLogin"/>

            <TextView
                android:id="@+id/id_reguser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_reguser"
                android:textSize="16sp"
                android:textColor="#EDCC2B25"
                android:clickable="true"
                android:padding="8dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="20dp"
                android:onClick="onRegist"/>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
